Add a system level installer for windows